# baseline_website

./: .lighthouserc.json  DEPLOYMENT.md  README.md  esg_data_utils.py  esg_model.py  gradio_app.py  index.html  main.py  package-lock.json  package.json  pyproject.toml  vercel.json  vite.config.js
.github/workflows/: deploy.yml
api/: index.js
knowledge/: 投资意见.txt  政策.txt  甲模型.txt
src/: App.vue  main.js
src/api/: index.js
src/router/: index.js
src/stores/: esg.js
src/styles/: global.scss
src/views/: Analysis.vue  Home.vue  Reports.vue  Scoring.vue  Settings.vue
