[project]
name = "esg-scoring-system"
version = "1.0.0"
description = "ESG评分系统"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "plotly",
    "matplotlib",
    "seaborn",
    "gradio>=4.0.0",
    "openpyxl",
    "xlrd",
    "python-docx",
    "reportlab",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
